[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heishasim"
version = "0.1.0"
description = "Panasonic heat pump serial simulator with GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyserial>=3.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["heishasim*"]
