[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heishasim"
version = "0.1.0"
description = "Panasonic heat pump serial simulator with GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyserial>=3.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["heishasim*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = [
  "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["heishasim"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false
